Refactoring : Make use of toList() collector